--- a/app/views/kaminari/_first_page.html.erb
+++ b/app/views/kaminari/_first_page.html.erb
@@ -7,5 +7,6 @@
     remote:        data-remote
 -%>
 <span class="first">
-  <%= link_to_unless current_page.first?, t('views.pagination.first').html_safe, url, remote: remote %>
+  <%= link_to_unless current_page.first?, t('views.pagination.first').html_safe, url, remote: remote, class: "inline-block border-t border-b border-r border-blue-300 px-4 py-2 text-blue text-blue-700 hover:text-blue-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-blue-100 active:text-blue-700 transition ease-in-out duration-150" %>
 </span>
+  
