--- a/app/views/kaminari/_gap.html.erb
+++ b/app/views/kaminari/_gap.html.erb
@@ -5,4 +5,4 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
-<span class="page gap"><%= t('views.pagination.truncate').html_safe %></span>
+<span class="page gap inline-block border-t border-b border-r border-blue-300 px-4 py-2 text-gray text-gray-700 hover:text-gray-500"><%= t('views.pagination.truncate').html_safe %></span>
