--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -21,7 +21,7 @@
     </article>
 <% else %>
     <%= tag.tr do %>
-        <%= tag.td class: "px-6 py-4 whitespace-no-wrap border-b border-blue-200" do %>
+        <%= tag.td class: "px-6 py-4 whitespace-no-wrap #{note_iteration.last? ? nil  : ' border-b '} border-blue-200" do %>
             <div class="flex items-start">
                 <span class="text-sm leading-5 font-medium text-gray-900 mr-2 mb-2"><%= note.try(:reify) ? note.reify.title : note.title %></span>
                 <% if note.try(:reify) %>
@@ -33,14 +33,14 @@
                 <% end %>            
             </div>
         <% end %>
-        <%= tag.td class: "px-6 py-4 whitespace-no-wrap border-b border-blue-200 text-sm leading-5 text-gray-500" do %>
+        <%= tag.td class: "px-6 py-4 whitespace-no-wrap #{note_iteration.last? ? nil  : ' border-b '} border-blue-200 text-sm leading-5 text-gray-500" do %>
             <% if note.try(:reify) %>
                 <%= markdown note.reify.body.truncate_words(10) %>
             <% else %>
                 <%= markdown note.body.truncate_words(10) %>
             <% end %>
         <% end %>
-        <%= tag.td class: "px-6 py-4 whitespace-no-wrap border-b border-blue-200 text-sm leading-5 text-gray-500" do %>
+        <%= tag.td class: "px-6 py-4 whitespace-no-wrap #{note_iteration.last? ? nil  : ' border-b '} border-blue-200 text-sm leading-5 text-gray-500" do %>
             <%= note.try(:reify) ? "#{time_ago_in_words(note.reify.updated_at)} ago" : "#{time_ago_in_words(note.updated_at)} ago" %>
             <div class="text-xs leading-5 text-gray-500 flex">
                 <% if params[:action] == "index" %>
