--- a/app/views/shared/_form-errors.html.erb
+++ b/app/views/shared/_form-errors.html.erb
@@ -1,12 +1,14 @@
   <% if object.errors.any? %>
-    <div id="error_explanation">
-      <h2>
+    <div id="error_explanation" class="">
+      <h2 class="bg-red-500 text-white font-bold px-4 py-2">
         <%= pluralize(object.errors.count, "error") %> prohibited this item from being saved:
       </h2>
-      <ul>
-        <% object.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
+      <div class="border border-t-0 border-red-400 bg-red-100 px-4 py-3 text-red-700">
+        <ul>
+          <% object.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+          <% end %>
+        </ul>
+      </div>
     </div>
   <% end %>
