--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,4 +1,6 @@
-<h3>Edit <%= resource_name.to_s.humanize %></h3>
+<%= content_for :title do %>
+  Edit <%= resource_name.to_s.humanize%>
+<% end %>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "users/shared/error_messages", resource: resource %>
 
@@ -45,14 +47,16 @@
     <%= f.password_field :current_password, autocomplete: "current-password", class: "input" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Update" %>
+  <div class="actions field">
+    <%= f.submit "Update", class: "btn btn-blue" %>
   </div>
 <% end %>
 
-<div class="bg-red-50 p-4 mb-5 text-red-800">
-<h3 class="text-red-800">Cancel my account</h3>
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<div class="mb-4">
+  <div class="bg-red-500 text-white font-bold px-4 py-2">Danger Zone</div>
+  <div class="border border-t-0 border-red-400 bg-red-100 px-4 py-3 text-red-700">
+    <%= button_to "Cancel My Account", registration_path(resource_name), class: "btn btn-red", data: { confirm: "Are you sure?" }, method: :delete %>
+  </div>
 </div>
 
-<%= link_to "Back", :back %>
+<%= link_to "Back", :back, class: "text-blue-600 hover:text-blue-800" %>
