Style links globally.

--- a/app/javascript/css/application.scss
+++ b/app/javascript/css/application.scss
@@ -1,6 +1,7 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
-@import "./components/forms";
-@import "./components/simplemde";
-@import "./components/button";
 @import "tailwindcss/utilities";
+@import "./components/links";
+@import "./components/forms";
+@import "./components/button";
+@import "./components/simplemde";
