--- a/app/views/reminders/_reminder.html.erb
+++ b/app/views/reminders/_reminder.html.erb
@@ -8,7 +8,7 @@
     <%= tag.td class: "px-6 py-4 whitespace-no-wrap #{reminder_iteration.last? ? nil  : ' border-b '} border-blue-200 text-sm leading-5 text-gray-500" do %>
         <%= time_ago_in_words(reminder.time) %> from now on <%= reminder.time.strftime("%D %r") %>
         <div class="text-xs leading-5 text-gray-500 flex">
-            <%= link_to "Edit", edit_reminder_path(reminder) %>
+            <%= link_to "Edit Reminder", edit_reminder_path(reminder) %>
         </div>
     <% end %>
 <% end %>
