--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -1,2 +1,2 @@
-<%= content_for :title do "Create a New Note" end %>
+<%= content_for :title do "Add a Note" end %>
 <%= render partial: "form", locals: { object: @note } %>
