--- a/app/views/notes/versions.html.erb
+++ b/app/views/notes/versions.html.erb
@@ -1,3 +1,4 @@
+<%= content_for :title do "Previous Versions" end %>
 <%= link_to edit_note_path(@note), class: "text-blue-600 hover:text-blue-800 flex items-center mb-4" do %>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="fill-current h-3 mr-2"><path d="M3.828 9l6.071-6.071-1.414-1.414L0 10l.707.707 7.778 7.778 1.414-1.414L3.828 11H20V9H3.828z"/></svg>
     Back To Note
