--- a/app/views/shared/features/_features.html.erb
+++ b/app/views/shared/features/_features.html.erb
@@ -1,45 +1,47 @@
 <div class="py-12 bg-white">
-  <div class="max-w-xl mx-auto px-4 sm:px-6 lg:max-w-screen-xl lg:px-8">
-    <div class="lg:grid lg:grid-cols-3 lg:gap-8">
-      <div>
-        <div class="flex items-center justify-center h-12 w-12 bg-blue-500 text-white">
-          <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
-          </svg>
+    <div class="max-w-xl mx-auto px-4 sm:px-6 lg:max-w-screen-xl lg:px-8">
+        <div class="lg:grid lg:grid-cols-3 lg:gap-8">
+            <div>
+                <div class="flex items-center justify-center h-12 w-12 bg-blue-500 text-white">
+                    <svg class="h-6 w-6 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M12.3 3.7l4 4L4 20H0v-4L12.3 3.7zm1.4-1.4L16 0l4 4-2.3 2.3-4-4z" /></svg>
+                </div>
+                <div class="mt-5">
+                    <h5 class="text-lg leading-6 font-medium text-gray-900">Take Notes</h5>
+                    <ul class="list-disc mt-2 text-base leading-6 text-gray-500 pl-5">
+                        <li>Easily import or export your data.</li>
+                        <li>Recover deleted notes, and restore previous versions.</li>
+                        <li>Share your notes publicly.</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="mt-10 lg:mt-0">
+                <div class="flex items-center justify-center h-12 w-12 bg-blue-500 text-white">
+                    <svg class="h-6 w-6 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M0 11l2-2 5 5L18 3l2 2L7 18z" /></svg>
+                </div>
+                <div class="mt-5">
+                    <h5 class="text-lg leading-6 font-medium text-gray-900">Complete Tasks</h5>
+                    <ul class="list-disc mt-2 text-base leading-6 text-gray-500 pl-5">
+                        <li>Intuitive drag-and-drop interface.</li>
+                        <li>Categorize tasks into groups.</li>
+                        <li>Search accross your tasks.</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="mt-10 lg:mt-0">
+                <div class="flex items-center justify-center h-12 w-12 bg-blue-500 text-white">
+                    <svg class="h-6 w-6 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                        <path d="M3 18a7 7 0 0 1 4-6.33V8.33A7 7 0 0 1 3 2H1V0h18v2h-2a7 7 0 0 1-4 6.33v3.34A7 7 0 0 1 17 18h2v2H1v-2h2zM5 2a5 5 0 0 0 4 4.9V10h2V6.9A5 5 0 0 0 15 2H5z" />
+                    </svg>
+                </div>
+                <div class="mt-5">
+                    <h5 class="text-lg leading-6 font-medium text-gray-900">Set Reminders</h5>
+                    <ul class="list-disc mt-2 text-base leading-6 text-gray-500 pl-5">
+                        <li>Recieve SMS messages alerting you to upcoming reminders.</li>
+                        <li>Old reminders are automatically removed.</li>
+                        <li>Search accross your reminders.</li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div class="mt-5">
-          <h5 class="text-lg leading-6 font-medium text-gray-900">Competitive exchange rates</h5>
-          <p class="mt-2 text-base leading-6 text-gray-500">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.
-          </p>
-        </div>
-      </div>
-      <div class="mt-10 lg:mt-0">
-        <div class="flex items-center justify-center h-12 w-12 bg-blue-500 text-white">
-          <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 6l3 1m0 0l-3 9a5.002 5.002 0 006.001 0M6 7l3 9M6 7l6-2m6 2l3-1m-3 1l-3 9a5.002 5.002 0 006.001 0M18 7l3 9m-3-9l-6-2m0-2v2m0 16V5m0 16H9m3 0h3" />
-          </svg>
-        </div>
-        <div class="mt-5">
-          <h5 class="text-lg leading-6 font-medium text-gray-900">No hidden fees</h5>
-          <p class="mt-2 text-base leading-6 text-gray-500">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.
-          </p>
-        </div>
-      </div>
-      <div class="mt-10 lg:mt-0">
-        <div class="flex items-center justify-center h-12 w-12 bg-blue-500 text-white">
-          <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
-          </svg>
-        </div>
-        <div class="mt-5">
-          <h5 class="text-lg leading-6 font-medium text-gray-900">Transfers are instant</h5>
-          <p class="mt-2 text-base leading-6 text-gray-500">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.
-          </p>
-        </div>
-      </div>
     </div>
-  </div>
 </div>
