--- a/app/views/shared/hero/_main_content.html.erb
+++ b/app/views/shared/hero/_main_content.html.erb
@@ -1,12 +1,10 @@
 <div class="sm:text-center md:max-w-2xl md:mx-auto lg:col-span-6 lg:text-left">
     <h2 class="mt-1 text-4xl tracking-tight leading-10 font-extrabold text-white sm:leading-none sm:text-6xl lg:text-5xl xl:text-6xl">
-        Data to enrich your
+        A better way to 
         <br class="hidden md:inline" />
-        <span class="text-blue-500">online business </span>
+        <span class="text-blue-500">stay organized</span>
     </h2>
-    <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-xl lg:text-lg xl:text-xl">
-        Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua ad ad non deserunt sunt.
-    </p>
+    <p class="mt-3 text-base text-white sm:mt-5 sm:text-xl lg:text-lg xl:text-xl">PoNotes is an open-source application to help take notes, complete tasks, and set reminders.</p>
     <div class="mt-5 sm:flex sm:justify-center lg:justify-start md:mt-8">
         <div>
             <%= link_to "Create an Account", new_user_registration_path, class: "w-full flex items-center justify-center px-8 py-3 border border-transparent text-base leading-6 font-medium  text-white bg-blue-600 hover:bg-blue-500 hover:text-white focus:outline-none focus:border-blue-700 focus:shadow-outline-blue transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10" %>
