--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -14,6 +14,7 @@
                             <%= render "shared/hero/main_content" %>
                             <%= render "shared/hero/video" %>
                         </div>
+                        <%= render "shared/misc/debug" if Rails.env == 'development' %>
                     </main>
                 </div>
             </div>
