Add features partial.

--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -17,6 +17,7 @@
                     </main>
                 </div>
             </div>
+            <%= render "shared/features/features" %>
             <%= render "shared/footer/footer" %>
         </div>
     </body>
