--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,8 +1,8 @@
 <%= content_for :title do "My Notes" end %>
 <%= content_for :page_links do %>
-    <div class="sm:flex justify-between flex-wrap items-end">
-        <div class="flex mt-3 mb-3 sm:mb-0 md:mb-0 lg:mb-0 xl:mb-0">
-            <%= link_to new_note_path, class: "text-white border border-white border-r-0 flex items-center px-2 py-1 text-sm focus:outline-none focus:bg-white focus:text-black hover:bg-white hover:text-black" do %>
+    <div class="md:flex justify-between flex-wrap items-end">
+        <div class="md:flex mt-3 mb-3 md:mb-0 md:mb-0 lg:mb-0 xl:mb-0">
+            <%= link_to new_note_path, class: "text-white border border-white md:border-r-0 flex items-center px-2 py-1 text-sm focus:outline-none focus:bg-white focus:text-black hover:bg-white hover:text-black" do %>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="fill-current h-3 mr-2"><path d="M11 9h4v2h-4v4H9v-4H5V9h4V5h2v4zm-1 11a10 10 0 1 1 0-20 10 10 0 0 1 0 20zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16z"/></svg>
                 Add a Note
             <% end %>
