--- a/app/views/notes/version.html.erb
+++ b/app/views/notes/version.html.erb
@@ -1,8 +1,8 @@
 <%= content_for :title do @note.title end %>
 <%= content_for :page_links do %>
-    <div class="sm:flex justify-between flex-wrap items-end">
-        <div class="flex mt-3 mb-3 sm:mb-0 md:mb-0 lg:mb-0 xl:mb-0">
-            <%= link_to notes_path, class: "text-white border border-white border-r-0  flex items-center px-2 py-1 text-sm focus:outline-none focus:bg-white focus:text-black hover:bg-white hover:text-black" do %>
+    <div class="md:flex justify-between flex-wrap items-end">
+        <div class="md:flex mt-3 mb-3 md:mb-0 md:mb-0 lg:mb-0 xl:mb-0">
+            <%= link_to notes_path, class: "text-white border border-white md:border-r-0  flex items-center px-2 py-1 text-sm focus:outline-none focus:bg-white focus:text-black hover:bg-white hover:text-black" do %>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="fill-current h-3 mr-2"><path d="M10 13h8V7h-8V2l-8 8 8 8v-5z"/></svg>
                 Back To My Notes
             <% end %>        
