--- a/app/views/shared/hero/_main_content.html.erb
+++ b/app/views/shared/hero/_main_content.html.erb
@@ -9,7 +9,7 @@
     </p>
     <div class="mt-5 sm:flex sm:justify-center lg:justify-start md:mt-8">
         <div>
-            <%= link_to "Create and Account", new_user_registration_path, class: "w-full flex items-center justify-center px-8 py-3 border border-transparent text-base leading-6 font-medium  text-white bg-blue-600 hover:bg-blue-500 focus:outline-none focus:border-blue-700 focus:shadow-outline-blue transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10" %>
+            <%= link_to "Create an Account", new_user_registration_path, class: "w-full flex items-center justify-center px-8 py-3 border border-transparent text-base leading-6 font-medium  text-white bg-blue-600 hover:bg-blue-500 focus:outline-none focus:border-blue-700 focus:shadow-outline-blue transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10" %>
         </div>
         <div class="mt-3 sm:mt-0 sm:ml-3">
             <%= link_to "Sign In", new_user_session_path, class: "w-full flex items-center justify-center px-8 py-3 border border-transparent text-base leading-6 font-medium  text-blue-600 bg-white hover:text-blue-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10" %>
