Conditionally add active classes to desktop menu links.

--- a/app/javascript/css/application.scss
+++ b/app/javascript/css/application.scss
@@ -1,7 +1,8 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
-@import "./components/links";
-@import "./components/forms";
 @import "./components/button";
+@import "./components/forms";
+@import "./components/links";
+@import "./components/menu_links";
 @import "./components/simplemde";
