--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
         <div class="max-w-7xl mx-auto pb-12 px-4 sm:px-6 lg:px-8">
           <div class="bg-white shadow px-5 py-6 sm:px-6">
               <%= yield %>
+              <%= render "shared/footer/footer" %>
               <%= render "shared/misc/debug" if Rails.env == 'development' %>
           </div>
         </div>
