--- a/app/views/shared/head/_head.html.erb
+++ b/app/views/shared/head/_head.html.erb
@@ -11,4 +11,8 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <%= favicon_link_tag "apple-touch-icon.png" %>
+    <%= favicon_link_tag "favicon-32x32.png" %>
+    <%= favicon_link_tag "favicon-16x16.png" %>
+    <link rel="manifest" href="/site.webmanifest">
 </head>
