--- a/app/views/shared/features/_features.html.erb
+++ b/app/views/shared/features/_features.html.erb
@@ -36,7 +36,7 @@
                 <div class="mt-5">
                     <h5 class="text-lg leading-6 font-medium text-gray-900">Set Reminders</h5>
                     <ul class="list-disc mt-2 text-base leading-6 text-gray-500 pl-5">
-                        <li>Recieve SMS messages alerting you to upcoming reminders.</li>
+                        <li>Recieve SMS messages alerting you to upcoming events.</li>
                         <li>Old reminders are automatically removed.</li>
                         <li>Search accross your reminders.</li>
                     </ul>
