--- a/app/javascript/css/components/_forms.scss
+++ b/app/javascript/css/components/_forms.scss
@@ -4,6 +4,12 @@
 .input:focus {
     @apply outline-none shadow-outline-blue border-blue-300;
 }
+.input--thin {
+    @apply appearance-none block w-full px-2 py-1 border border-gray-300 transition duration-150 ease-in-out;
+}
+.input--thin:focus {
+    @apply outline-none shadow-outline-blue border-blue-300;
+}
 .field_with_errors {
     .input {
         @apply border-red-300;
