Add YouTube video.

--- a/app/javascript/css/application.scss
+++ b/app/javascript/css/application.scss
@@ -1,6 +1,7 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+@import "./components/aspect";
 @import "./components/button";
 @import "./components/forms";
 @import "./components/links";
