--- a/app/views/shared/hero/_video.html.erb
+++ b/app/views/shared/hero/_video.html.erb
@@ -8,16 +8,8 @@
         <rect x="118" width="404" height="784" fill="url(#4f4f415c-a0e9-44c2-9601-6ded5a34a13e)"></rect>
     </svg>
     <div class="relative w-full lg:max-w-md">
-        <button type="button" class="relative block w-full overflow-hidden focus:outline-none focus:shadow-outline">
-            <img class="w-full" src="https://images.unsplash.com/photo-1556740758-90de374c12ad?ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1350&amp;q=80" alt="Woman making a sale" />
-            <div class="absolute inset-0 w-full h-full flex items-center justify-center">
-                <svg class="h-20 w-20 text-blue-500" fill="currentColor" viewBox="0 0 84 84">
-                    <circle opacity="0.9" cx="42" cy="42" r="42" fill="white"></circle>
-                    <path
-                        d="M55.5039 40.3359L37.1094 28.0729C35.7803 27.1869 34 28.1396 34 29.737V54.263C34 55.8604 35.7803 56.8131 37.1094 55.9271L55.5038 43.6641C56.6913 42.8725 56.6913 41.1275 55.5039 40.3359Z"
-                    ></path>
-                </svg>
-            </div>
-        </button>
+        <div class="relative aspect-16x9">
+            <iframe class="absolute w-full" width="560" height="315" src="https://www.youtube.com/embed/9LGQKQJjOJs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
     </div>
 </div>
